# julian

./: .env.example  .fallowrc.json  .gitignore  .npmrc  .oxlintrc.json  CONTRIBUTING.md  README.md  SECURITY.md  eslint.config.mjs  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts  wrangler.jsonc
.claude/: settings.json
.github/workflows/: ci.yml  deploy.yml
.husky/: pre-commit
docs/: development.md  follow-ups.md  security.md
public/: _headers  bootstrap.js  robots.txt
scripts/: deploy-web.sh
src/: main.tsx  providers.tsx  router.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: app-logo-parts.tsx  app-logo.tsx  app-shell.tsx  error-boundary-parts.tsx  event-chip-parts.tsx  event-chip.tsx  google-login-button.tsx  skip-link.tsx  theme-toggle.tsx  tooltip.tsx  use-event-chip.ts  use-year-view-state.ts  year-helpers.ts  year-view-error-boundary.tsx  year-view-reducer.test.ts  year-view-reducer.ts  year-view.tsx
src/domain/: date.test.ts  date.ts  event-key.ts  events.test.ts  events.ts  index.ts  types.ts  year-grid.test.ts  year-grid.ts
src/i18n/: context.tsx
src/lib/: async-task.test.ts  async-task.ts  calendar-selection.ts  google-calendar.test.ts  google-calendar.ts  open-event.ts  open-external.ts  router.tsx  theme.ts  year-view-preferences.ts  year-view-url.test.ts  year-view-url.ts
src/routes/: auth-callback-page.tsx  lab-page.tsx  landing-page.tsx  root-layout.tsx  (+1 more)
worker/: index.ts
(+53 files in other folders)
